--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "A Telegram AntiChannel in Group Bot by @Jigarvarma2005.",
-    "description": "A Telegram Bot for kicking mambers who using channel for messeging. Made by @Jigarvarma2005.",
+    "description": "A Telegram Bot for kicking members who using channel for messaging. Made by @Jigarvarma2005.",
     "keywords": [
         "telegram",
         "AntiChannel",
